Decrease top background-position

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ p {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: 50% 50%;
+	background-position: 50% -100px;
 }
 
 .header-overlay {
