--- a/css/styles.css
+++ b/css/styles.css
@@ -2,23 +2,93 @@
 	margin:0;
 	padding:0;
 }
+
 body {
 	font-family: 'Raleway', sans-serif;
 	overflow-y:scroll;
 	overflow-x: hidden;
 }
+
 p {
 	font-size: 14;
 }
 
-/* ========== Header ========== */
+/* ========== Generic CSS ==========  */
 
+.section-title {
+	padding-top: 90px;
+	padding-bottom: 50px;
+}
+
+.section-title h2 {
+	position: relative;
+	text-align: center;
+	color: #333;
+	font-size: 30px;
+	font-weight: 400px;
+	text-transform: uppercase;
+}
+
+.section-title p {
+	color: #333;
+	font-size: 18px;
+	line-height: 28px;
+	font-weight: 300;
+	text-align: center;
+	margin-top: 45px;
+}
+
+.section-title h2:after {
+	content: "";
+	position: absolute;
+	bottom: -20px;
+	left: 50%;
+	width: 60px;
+	height: 1px;
+	background-color: #129CF3;
+	margin-left: -30px;
+}
+
+/* ========== Navigation ========== */
+.navbar-default {
+	background-color: transparent;
+	z-index: 110;
+	transition: all 1s;
+}
+
+.navbar-default .navbar-nav > li > a {
+	color: #B5B5B5;
+	font-family: 'Raleway', sans-serif;
+	transition: all 1s;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+	color: #444;
+}
+
+.navbar-default .navbar-nav > li > a:focus {
+	color: #B5B5B5;
+}
+.navbar-brand p:hover {
+	color: #444;
+}
+
+.navbar-brand p:focus {
+	color: #B5B5B5;
+}
+
+.navbar-brand p {
+	color: #B5B5B5;
+	transition: all 1s;
+}
+
+/* ========== Header ========== */
 .header {
-	background-image: url("../images/testimonial-bg.jpg");
+	background-image: url("https://static.pexels.com/photos/167200/pexels-photo-167200.jpeg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: 50% -100px;
+	background-position: 50% 115%;
 }
 
 .header-overlay {
@@ -26,15 +96,18 @@ p {
 	padding-top: 80px;
 	padding-bottom: 80px;
 }
+
 /* ========== Profile ========== */
 .profile img {
 	border: 2px solid #129CF3;
 	border-radius: 50%;
 	width: 200px;
 }
+
 .profile {
 	padding-bottom: 150px;
 }
+
 .profile-title h2 {
 	color: #129CF3;
 	text-transform: uppercase;
@@ -42,15 +115,18 @@ p {
 	font-size: 30px;
 	margin-top: 25px;
 }
+
 .profile-title h4 {
 	color: #129CF3;
 	margin-top: 10px;
 }
+
 .profile-title h4 span {
 	color:#D8D8D8;
 	font-weight: 300;
 	font-style: italic;
 }
+
 .profile-title p {
 	color:#D8D8D8;
 	font-size: 18px;
