--- a/css/styles.css
+++ b/css/styles.css
@@ -49,40 +49,58 @@ p {
 	margin-left: -30px;
 }
 
-/* ========== Navigation ========== */
+/* =========== Navigation ============ */
+
 .navbar-default {
-	background-color: transparent;
-	z-index: 110;
-	transition: all 1s;
+    background-color: transparent;
+    border-color: #444;
+    z-index: 110;
+    transition: all 1s;
+    -moz-transition: all 1s;
+    -o-transition: all 1s;
+    -webkit-transition: all 1s;
 }
-
 .navbar-default .navbar-nav > li > a {
-	color: #B5B5B5;
-	font-family: 'Raleway', sans-serif;
-	transition: all 1s;
+    color: #B5B5B5;
+    font-family: "Raleway", sans-serif;
+    transition: all 1s;
+    -moz-transition: all 1s;
+    -o-transition: all 1s;
+    -webkit-transition: all 1s;
+    
 }
-
 .navbar-default .navbar-nav > li > a:hover {
-	color: #444;
+    color: #129CF3;
 }
-
 .navbar-default .navbar-nav > li > a:focus {
-	color: #B5B5B5;
+    color: #B5B5B5;
 }
-.navbar-brand p:hover {
-	color: #444;
-}
-
-.navbar-brand p:focus {
+/*.navbar-brand {
+    padding: 9px 15px;
+}*/
+/*.navbar-brand p {
 	color: #B5B5B5;
+   transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -webkit-transition: all 1s;*/
 }
-
-.navbar-brand p {
-	color: #B5B5B5;
-	transition: all 1s;
+.lastname {
+	color: #129CF3;
+}
+.navbar-default .navbar-nav > .active>a, 
+.navbar-default .navbar-nav > .active>a:hover,
+.navbar-default .navbar-nav > .active>a:focus {
+    background-color: transparent;
+    color: #129CF3;
+} 
+.navbar-header {
+	width: 150px;
+	padding: 9px
 }
 
 /* ========== Header ========== */
+
 .header {
 	background-image: url("https://static.pexels.com/photos/167200/pexels-photo-167200.jpeg");
 	background-attachment: fixed;
@@ -98,6 +116,7 @@ p {
 }
 
 /* ========== Profile ========== */
+
 .profile img {
 	border: 2px solid #129CF3;
 	border-radius: 50%;
@@ -132,4 +151,34 @@ p {
 	font-size: 18px;
 	line-height: 27px;
 	padding-top: 50px;
+}
+
+
+/* ========= Footer =========*/
+.footer {
+    background-color: #1a1a1a;
+    padding-bottom: 35px;
+    padding-top: 35px;
+    border-bottom: 3px solid #129CF3;
+}
+.copyright p {
+    color: #B5B5B5;
+    font-weight: 600;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+.copyright p a {
+    text-decoration: none;
+    color: #129CF3;
+}
+.scroll-top {
+    text-align: right;
+}
+.scroll-top a {
+    background-color: #129CF3;
+    padding: 25px;
+}
+.scroll-top a i {
+    color: #fff;
+    font-size: 25px;
 }
